# IriON_FASTAPI_BACK

./: .gitignore  LICENSE  README.md  pyproject.toml
migrations/: env.py
src/: main.py
src/api/: __init__.py  animals.py  shelters.py  users.py
src/core/: app_config.py
src/crud/: __init__.py  animals.py  base.py  shelters.py
src/database/: __init__.py  base.py  session.py
src/model/: __init__.py  animals.py  follows.py  shelters.py  users.py
src/schema/: __init__.py  crud_base.py
src/schema/animals/: __init__.py  crud.py
src/schema/follows/: __init__.py  crud.py
src/schema/shelter/: __init__.py  crud.py
src/schema/users/: crud.py
