[tool.poetry]
name = "irion_fastapi_back"
version = "1"
description = "IriON FastAPI Backend"
authors = ["Taehyun Lee, <0417taehyun@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
gunicorn = "^20.1.0"
uvicorn = "^0.18.1"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.39"}
python-dotenv = "^0.20.0"
alembic = "^1.8.0"
mysqlclient = "^2.1.1"
asyncmy = "^0.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
